assignment2/target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Self'", "'Null'", "'Class'", 
                     "'Val'", "'Var'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'>'", 
                     "'>='", "'<'", "'<='", "'==.'", "'+.'", "'::'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", "'..'", 
                     "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "BLOCK_COMMENT", "INTLIT", "FLOATLIT", 
                      "BOOLLIT", "STRINGLIT", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", 
                      "IN", "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", 
                      "SELF", "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQUAL", "ASSIGN", "NOT_EQUAL", 
                      "GT", "GTE", "LT", "LTE", "COMPARE_STRING", "CONCATE", 
                      "TWOCOLON", "LB", "RB", "LP", "RP", "LSB", "RSB", 
                      "SEMI", "COLON", "TWODOT", "DOT", "CM", "ID", "DOLLAR_ID", 
                      "WS", "NEWLINE", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_memlist = 2
    RULE_member = 3
    RULE_attribute_declare = 4
    RULE_immutable_declare = 5
    RULE_mutable_declare = 6
    RULE_identifier = 7
    RULE_exprs = 8
    RULE_method_declare = 9
    RULE_paramlist = 10
    RULE_param = 11
    RULE_expr = 12
    RULE_expr1 = 13
    RULE_expr2 = 14
    RULE_expr3 = 15
    RULE_expr4 = 16
    RULE_expr5 = 17
    RULE_expr6 = 18
    RULE_expr7 = 19
    RULE_index_operators = 20
    RULE_expr8 = 21
    RULE_expr9 = 22
    RULE_expr10 = 23
    RULE_expr11 = 24
    RULE_exprlist = 25
    RULE_literal = 26
    RULE_statement = 27
    RULE_instance_attr_names = 28
    RULE_declaration_statement = 29
    RULE_assignment_statement = 30
    RULE_lhs = 31
    RULE_if_statement = 32
    RULE_elif_else_statement = 33
    RULE_else_statement = 34
    RULE_for_statement = 35
    RULE_break_statement = 36
    RULE_continue_statement = 37
    RULE_return_statement = 38
    RULE_method_invocation_statement = 39
    RULE_instance_method_invocation = 40
    RULE_static_method_invocation = 41
    RULE_block_statement = 42
    RULE_statementlist = 43
    RULE_data_type = 44
    RULE_primitive_type = 45
    RULE_arr_type = 46
    RULE_element_type = 47
    RULE_arr_size = 48
    RULE_class_type = 49
    RULE_array_lit = 50
    RULE_arraylist = 51

    ruleNames =  [ "program", "classdecl", "memlist", "member", "attribute_declare", 
                   "immutable_declare", "mutable_declare", "identifier", 
                   "exprs", "method_declare", "paramlist", "param", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "index_operators", "expr8", "expr9", "expr10", 
                   "expr11", "exprlist", "literal", "statement", "instance_attr_names", 
                   "declaration_statement", "assignment_statement", "lhs", 
                   "if_statement", "elif_else_statement", "else_statement", 
                   "for_statement", "break_statement", "continue_statement", 
                   "return_statement", "method_invocation_statement", "instance_method_invocation", 
                   "static_method_invocation", "block_statement", "statementlist", 
                   "data_type", "primitive_type", "arr_type", "element_type", 
                   "arr_size", "class_type", "array_lit", "arraylist" ]

    EOF = Token.EOF
    BLOCK_COMMENT=1
    INTLIT=2
    FLOATLIT=3
    BOOLLIT=4
    STRINGLIT=5
    BREAK=6
    CONTINUE=7
    IF=8
    ELSEIF=9
    ELSE=10
    FOREACH=11
    TRUE=12
    FALSE=13
    ARRAY=14
    IN=15
    INT=16
    FLOAT=17
    BOOLEAN=18
    STRING=19
    RETURN=20
    SELF=21
    NULL=22
    CLASS=23
    VAL=24
    VAR=25
    CONSTRUCTOR=26
    DESTRUCTOR=27
    NEW=28
    BY=29
    ADD=30
    SUB=31
    MUL=32
    DIV=33
    MOD=34
    NOT=35
    AND=36
    OR=37
    EQUAL=38
    ASSIGN=39
    NOT_EQUAL=40
    GT=41
    GTE=42
    LT=43
    LTE=44
    COMPARE_STRING=45
    CONCATE=46
    TWOCOLON=47
    LB=48
    RB=49
    LP=50
    RP=51
    LSB=52
    RSB=53
    SEMI=54
    COLON=55
    TWODOT=56
    DOT=57
    CM=58
    ID=59
    DOLLAR_ID=60
    WS=61
    NEWLINE=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    global countName
    countName = 0
    global countValue 
    countValue = 0



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassdeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.classdecl()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 109
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def memlist(self):
            return self.getTypedRuleContext(D96Parser.MemlistContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = D96Parser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(D96Parser.CLASS)
                self.state = 112
                self.match(D96Parser.ID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.COLON:
                    self.state = 113
                    self.match(D96Parser.COLON)
                    self.state = 114
                    self.match(D96Parser.ID)


                self.state = 117
                self.match(D96Parser.LP)
                self.state = 118
                self.memlist()
                self.state = 119
                self.match(D96Parser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(D96Parser.CLASS)
                self.state = 122
                self.match(D96Parser.ID)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.COLON:
                    self.state = 123
                    self.match(D96Parser.COLON)
                    self.state = 124
                    self.match(D96Parser.ID)


                self.state = 127
                self.match(D96Parser.LP)
                self.state = 128
                self.match(D96Parser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def memlist(self):
            return self.getTypedRuleContext(D96Parser.MemlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemlist" ):
                return visitor.visitMemlist(self)
            else:
                return visitor.visitChildren(self)




    def memlist(self):

        localctx = D96Parser.MemlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memlist)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.member()
                self.state = 132
                self.memlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.attribute_declare()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.method_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def immutable_declare(self):
            return self.getTypedRuleContext(D96Parser.Immutable_declareContext,0)


        def mutable_declare(self):
            return self.getTypedRuleContext(D96Parser.Mutable_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_declare" ):
                return visitor.visitAttribute_declare(self)
            else:
                return visitor.visitChildren(self)




    def attribute_declare(self):

        localctx = D96Parser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_declare)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.immutable_declare()
                pass
            elif token in [D96Parser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.mutable_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Immutable_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExprContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExprContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_immutable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutable_declare" ):
                return visitor.visitImmutable_declare(self)
            else:
                return visitor.visitChildren(self)




    def immutable_declare(self):

        localctx = D96Parser.Immutable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_immutable_declare)
        self._la = 0 # Token type
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(D96Parser.VAL)
                self.state = 146
                self.identifier()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==D96Parser.CM:
                    self.state = 147
                    self.match(D96Parser.CM)
                    self.state = 148
                    self.identifier()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(D96Parser.COLON)
                self.state = 155
                self.data_type()
                self.state = 156
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                countName,countValue=0,0
                self.state = 159
                self.match(D96Parser.VAL)
                self.state = 160
                self.identifier()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==D96Parser.CM:
                    self.state = 161
                    self.match(D96Parser.CM)
                    self.state = 162
                    self.identifier()
                    countName+=1
                    self.state = 169
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 170
                self.match(D96Parser.COLON)
                self.state = 171
                self.data_type()
                self.state = 172
                self.match(D96Parser.ASSIGN)
                self.state = 173
                self.expr()
                self.state = 180
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 174
                        self.match(D96Parser.CM)
                        self.state = 175
                        self.expr()
                        countValue+=1 
                    self.state = 182
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                self.state = 183
                if not countName==countValue:
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "countName==countValue")
                self.state = 184
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mutable_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExprContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExprContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_mutable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutable_declare" ):
                return visitor.visitMutable_declare(self)
            else:
                return visitor.visitChildren(self)




    def mutable_declare(self):

        localctx = D96Parser.Mutable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mutable_declare)
        self._la = 0 # Token type
        try:
            self.state = 229
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.match(D96Parser.VAR)
                self.state = 189
                self.identifier()
                self.state = 194
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==D96Parser.CM:
                    self.state = 190
                    self.match(D96Parser.CM)
                    self.state = 191
                    self.identifier()
                    self.state = 196
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 197
                self.match(D96Parser.COLON)
                self.state = 198
                self.data_type()
                self.state = 199
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                countName,countValue=0,0
                self.state = 202
                self.match(D96Parser.VAR)
                self.state = 203
                self.identifier()
                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==D96Parser.CM:
                    self.state = 204
                    self.match(D96Parser.CM)
                    self.state = 205
                    self.identifier()
                    countName+=1
                    self.state = 212
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 213
                self.match(D96Parser.COLON)
                self.state = 214
                self.data_type()
                self.state = 215
                self.match(D96Parser.ASSIGN)
                self.state = 216
                self.expr()
                self.state = 223
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 217
                        self.match(D96Parser.CM)
                        self.state = 218
                        self.expr()
                        countValue+=1 
                    self.state = 225
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                self.state = 226
                if not countName==countValue:
                    from antlr4.error.Errors import FailedPredicateException
                    raise FailedPredicateException(self, "countName==countValue")
                self.state = 227
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = D96Parser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 231
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLAR_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def CM(self):
            return self.getToken(D96Parser.CM, 0)

        def exprs(self):
            return self.getTypedRuleContext(D96Parser.ExprsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exprs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprs" ):
                return visitor.visitExprs(self)
            else:
                return visitor.visitChildren(self)




    def exprs(self):

        localctx = D96Parser.ExprsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprs)
        try:
            self.state = 238
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 233
                self.expr()
                self.state = 234
                self.match(D96Parser.CM)
                self.state = 235
                self.exprs()
                pass
